--- a/package.json
+++ b/package.json
@@ -7,12 +7,17 @@
     "doc": "doc"
   },
   "dependencies": {
+    "@types/node": "^13.7.4",
     "typescript": "^3.8.2"
   },
-  "devDependencies": {},
-  "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+  "devDependencies": {
+    "@types/chai": "^4.2.9",
+    "@types/mocha": "^7.0.1",
+    "chai": "^4.2.0",
+    "mocha": "^7.0.1",
+    "ts-node": "^8.6.2"
   },
+  "scripts": { "test": "mocha -r ts-node/register test/**.spec.ts" },
   "repository": {
     "type": "git",
     "url": "git+https://github.com/pokuwagata/precure.ts.git"
